# ATLAS

./: .gitignore  README.md
.claude/: launch.json
engine/: daily_picks.sh  pyproject.toml
engine/atlas/: __init__.py  bus.py  claude_bridge.py  commonsense_bridge.py  config.py  controller.py  daily_job.py  gcal.py  gmail.py  google_auth.py  health.py  hydra_prices.py  latex.py  market_outlook.py  meetings.py  networth.py  news.py  paycheck.py  picks.py  portfolio.py  prices.py  profile.py  profile_seed.py  reminders.py  resume.py  resume_corpus.py  resume_templates.py  server.py  soccer.py  soccer_lineups.py  soccer_parlay.py  store.py  user_config.py  yahoo.py
engine/atlas/web/: app.js  index.html  styles.css
