[project]
name = "atlas-engine"
version = "0.1.0"
description = "Atlas — a localhosted dashboard for life"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12",
    "python-multipart>=0.0.9",
    # Gmail + Google Calendar (Inbox tab). Core deps so `uv sync` never prunes them.
    "google-api-python-client>=2.120",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "yfinance>=1.5.1",
]

# Live-equity pricing from the local HYDRA caches (no longer used — Yahoo replaced it).
[project.optional-dependencies]
hydra = [
    "pandas>=2.2",
    "pyarrow>=15",
    "databento>=0.34",
]

[project.scripts]
atlas-server = "atlas.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas"]
